kubernetes/argocd2/Overlays/Production/frontend-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-service-ingress
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.com
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
