kubernetes/argocd2/Overlays/Production/users-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-service-ingress
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
  - host: users.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 8080
